# LA-Hacks-2026

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  package-lock.json  package.json  plan.md  pyproject.toml  requirements.txt  seed_db.py
backend/: api.py  main.py
backend/agents/: run_all.py
backend/kitscout/: __init__.py  db.py  indexes.py  schemas.py
backend/prompts/: followup.txt  intent_parser.txt  list_generator.txt  listing_attribute_extractor.txt  negotiator.txt  other_flags.txt
backend/services/: _browser.py  _browser_offerup.py  bargain.py  embeddings.py  gen_followup.py  gen_list.py  gen_negotiation_message.py  ingest.py  intent_parser.py  listing_attribute_extractor.py  listing_ranker.py  listing_search.py  listing_store.py  messenger.py  negotiation_tester.py  offerup_graphql.py  offerup_message_reader.py  offerup_messenger.py  offerup_scraper.py  query.py  query_flow.py  scraper.py  search_jobs.py  seller_reply_enricher.py  tester.py
docs/: offerup_scraper_output.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css  theme.css
kitscout/: indexes.py  schemas.py
scraper/: facebook.js  schema.js  session.js
scraper/.chrome-profile-offerup/: Local State
scraper/output/: 2026-04-25T10-50-05-907Z_snowboard.json
scripts/: fb_login.js  fb_verify.js  offerup_login.py  print_addresses.py  run_agents.sh  run_scrape.js  scrape_spike.py  simulate_negotiation.py  sync_agentverse_profiles.py  test_client.py
tests/: test_db.py  test_ingest.py  test_parser.py  test_query_flow.py
(+643 files in other folders)
